kajit/tests/snapshots/generated_synthetic__generated_rvsdg_postcard_vec_scalar_large_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: ir_text
---
lambda @0 (shape: "ScalarVec") {
  region {
    args: [%cs, %os]
    n2 = apply @1 [%cs:arg, %os:arg] -> [%cs, %os]
    results: [%cs:n2, %os:n2]
  }
}
